:sparkles: added dynamic count to cart

--- a/TP5/client/src/app/product/product.component.html
+++ b/TP5/client/src/app/product/product.component.html
@@ -7,8 +7,8 @@
     <div class="col">
       <section>
         <h2>Description</h2>
-        <p id="product-desc">
-          {{product.description}}
+        <p id="product-desc" [innerHTML]="product.description">
+
         </p>
       </section>
       <section>
