--- a/TP5/client/src/app/app.component.html
+++ b/TP5/client/src/app/app.component.html
@@ -22,7 +22,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-            <span class="count">6</span>
+            <span class="count">{{getCount()}}</span>
           </a>
         </li>
       </ul>
