--- a/TP5/client/src/app/shopping-cart/shopping-cart.component.html
+++ b/TP5/client/src/app/shopping-cart/shopping-cart.component.html
@@ -33,11 +33,11 @@
             </div>
           </div>
         </td>
-        <td class="price">{{(item.price*item.quantity).toFixed(2)}}&thinsp;$</td>
+        <td class="price">{{ item.price*item.quantity | price }}&thinsp;$</td>
       </tr>
     </tbody>
   </table>
-  <p class="shopping-cart-total">Total: <strong id="total-amount">{{total.toFixed(2)}}&thinsp;$</strong></p>
+  <p class="shopping-cart-total">Total: <strong id="total-amount">{{ total | price }}&thinsp;$</strong></p>
   <a class="btn pull-right" routerLink="/commande">Commander <i class="fa fa-angle-double-right"></i></a>
 <button class="btn" id="remove-all-items-button" (click)="deleteAll()"><i class="fa fa-trash-o"></i>&nbsp; Vider le panier</button>
 </div>
