:sparkles: order and confirmation component

--- a/TP5/client/src/app/confirmation/confirmation.component.html
+++ b/TP5/client/src/app/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
 <article>
-  <h1>Votre commande est confirmée <span id="name">Antoine Béland</span>!</h1>
-  <p>Votre numéro de confirmation est le <span id="confirmation-number">00001</span>.</p>
+  <h1>Votre commande est confirmée <span id="name">{{orderInfo.name}}</span>!</h1>
+  <p>Votre numéro de confirmation est le <span id="confirmation-number">{{orderInfo.id}}</span>.</p>
 </article>
